# performance-python-vs-rust

./: .env  .env.example  .gitignore  PROJECT_COMPLETION.md  README.md  pd-v0.1.md  pd-v0.2.md
.claude/: settings.local.json
docs/: METRICS_EXPLAINED.md
py-basis/: main.py  pyproject.toml
py-basis/src/: __init__.py  config.py
py-basis/src/calculator/: __init__.py  basis.py  indicators.py
py-basis/src/queue/: __init__.py  manager.py
py-basis/src/ui/: __init__.py  dashboard.py  logger.py
py-basis/src/websocket/: __init__.py  client.py  combined_client.py  handler.py
rust-basis/: Cargo.toml
rust-basis/src/: main.rs
rust-basis/src/calculator/: basis.rs  indicators.rs  mod.rs
rust-basis/src/config/: mod.rs  settings.rs
rust-basis/src/metrics/: collector.rs  mod.rs
rust-basis/src/queue/: manager.rs  mod.rs
rust-basis/src/ui/: dashboard.rs  logger.rs  mod.rs
rust-basis/src/websocket/: client.rs  handler.rs  mod.rs
scripts/: run-performance-test.sh  start-python.bat  start-python.sh  start-rust.bat  start-rust.sh  verify-setup.sh
