[package]
name = "rust-basis"
version = "0.1.0"
edition = "2024"
description = "Binance Basis Monitor - Rust Implementation"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
polars = { version = "0.36.0", features = ["lazy", "temporal", "strings"] }
ratatui = { version = "0.25", features = ["crossterm"] }
crossterm = "0.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dotenvy = "0.15"
crossbeam-channel = "0.5"
atomic-counter = "1.0"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
sysinfo = "0.29"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
